--- a/DEV/clinic_frontend/public/index.html
+++ b/DEV/clinic_frontend/public/index.html
@@ -6,13 +6,10 @@
         <title>React App</title>
         <!-- usar %PUBLIC% nos urls é o mesmo que usar a pasta 'public/' -->
         <!-- apenas os ficheiros na pasta 'public/' podem ser referenciados no HTML -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <main id="root">
-
-            
-
-        </main>
+        <main id="root"></main>
     </body>
 </html>
