feat: second frontend app

--- a/DEV/clinic_frontend/public/index.html
+++ b/DEV/clinic_frontend/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>React App</title>
+        <title>Fisioterapista</title>
         <!-- usar %PUBLIC% nos urls é o mesmo que usar a pasta 'public/' -->
         <!-- apenas os ficheiros na pasta 'public/' podem ser referenciados no HTML -->
     </head>
